--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,17 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.hgijeon.intellijrefactoringplugin
-pluginName = intellij-refactoring-plugin
+pluginGroup = gi.hyeon.jetbrains.plugin
+pluginName = IntelliJ Platform Plugin
 pluginVersion = 0.0.1
 pluginSinceBuild = 202
-pluginUntilBuild = 203.*
+pluginUntilBuild =
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions
 pluginVerifierIdeVersions = 2020.2.4, 2020.3.2, 2021.1
+
+# ideDirectory 가 지정되어있으면 더 아래 지정된 플랫폼을 무시하고 해당 위치의 IDE 를 사용한다.
+ideDirectory = /Applications/Android Studio.app/Contents
 
 platformType = IC
 platformVersion = 2020.2.4
