액션 버튼 추가

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -21,4 +21,11 @@
         <listener class="gi.hyeon.intellij.plugin.listeners.MyProjectManagerListener"
                   topic="com.intellij.openapi.project.ProjectManagerListener"/>
     </applicationListeners>
+
+    <actions>
+        <action id="org.intellij.sdk.action.PopupDialogAction" class="gi.hyeon.intellij.plugin.actions.RefactorViewBinding"
+            text="ViewBinding 리팩토링" description="안드로이드 코드에 view binding 적용.">
+            <add-to-group group-id="ToolsMenu" anchor="first"/>
+        </action>
+    </actions>
 </idea-plugin>
